--- a/.github/workflows/python-test-build.yml
+++ b/.github/workflows/python-test-build.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install build
+          pip install flake8
           pip install -r requirements.txt
       - name: flake8 Python Style Checking
         run: |
