chore: Update on github actions

--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -3,7 +3,7 @@ name: Create python project release PR
 on:
   push:
     branches:
-      - "test-gn"
+      - "test-qgn"
 permissions:
   contents: write
   pull-requests: write
