--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,37 @@ description = "A CLI tool."
 requires-python = ">=3.11"
 license = {file = "LICENSE.md"}
 dependencies = [
-  'comitizen > 3',
+    "commitizen > 3",
+    "argcomplete >= 3.1.1",
+    "cffi>=1.15.1",
+    "click>=8.1.6",
+    "docutils>=0.20.1",
+    "html5lib>=1.1",
+    "isodate>=0.6.1",
+    "owlrl>=6.0.2",
+    "packaging>=23.1",
+    "pipx>=1.2.0",
+    "prettytable>=2.5.0",
+    "pycparser>=2.21",
+    "pyparsing>=3.1.0",
+    "pyshacl>=0.23.0",
+    "rdflib>=6.3.2",
+    "six>=1.16.0",
+    "typing>=3.7.4.3",
+    "userpath>=1.9.0",
+    "wcwidth>=0.2.6",
+    "webencodings>=0.5.1",
 ]
+
+[project.optional-dependencies]
+dev = ["pytest", "flake8"]
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
 readme = { file = ["src/README.adoc", "introduction.md", "4dOntologyIntro.md", "ies.md"] }
+
+[tool.flake8]
+max-line-length = 120
 
 [project.urls]
 Repository = "https://github.com/Telicent-io/shacl-tool"
