--- a/.github/workflows/python-test-build.yml
+++ b/.github/workflows/python-test-build.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build
+          python -m piptools compile --extra dev -o requirements.txt pyproject.toml
           pip install -r requirements.txt
       - name: flake8 Python Style Checking
         run: |
