--- a/.github/workflows/python-test-build.yml
+++ b/.github/workflows/python-test-build.yml
@@ -28,8 +28,12 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install pip-tools
           python -m piptools compile --extra dev -o requirements.txt pyproject.toml
           pip install -r requirements.txt
+      - name: Build
+        run: |
+          python3 -m build
       - name: flake8 Python Style Checking
         run: |
           flake8 src
@@ -37,6 +41,4 @@ jobs:
       - name: Unit Tests
         run: |
           python3 -m unittest discover -s tests --verbose
-      - name: Build
-        run: |
-          python3 -m build
+      
