--- a/.github/workflows/python-test-build.yml
+++ b/.github/workflows/python-test-build.yml
@@ -24,16 +24,12 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python-version }} 
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pip-tools
+          pipx install pip-tools
           python -m piptools compile --extra dev -o requirements.txt pyproject.toml
-          pip install -r requirements.txt
-      - name: Build
-        run: |
-          python3 -m build
+          pipx install -r requirements.txt
       - name: flake8 Python Style Checking
         run: |
           flake8 src
@@ -41,4 +37,7 @@ jobs:
       - name: Unit Tests
         run: |
           python3 -m unittest discover -s tests --verbose
+      - name: Build
+        run: |
+          python3 -m build
       
