chore: Add flake8 as github action script

--- a/.github/workflows/python-test-build.yml
+++ b/.github/workflows/python-test-build.yml
@@ -30,10 +30,16 @@ jobs:
           python -m pip install pip-tools 
           python -m piptools compile --extra dev -o requirements.txt pyproject.toml
           pip install -r requirements.txt
-      - name: flake8 Python Style Checking
-        run: |
-          flake8 src
-          flake8 tests
+      - name: flake8 Lint Source
+        uses: py-actions/flake8@v2
+        with:
+          max-line-length: "120"
+          path: "src"
+      - name: flake8 Lint Tests
+        uses: py-actions/flake8@v2
+        with:
+          max-line-length: "120"
+          path: "test" 
       - name: Unit Tests
         run: |
           python3 -m unittest discover -s tests --verbose
