--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ build-backend = "setuptools.build_meta"
 [tool]
 [tool.commitizen]
 name = "cz_conventional_commits"
-tag_format = "$version"
+version = "0.0.1"
+version_files = ["pyproject.toml:version"]
+tag_format = "v$version"
+
 style = [
     ["qmark", "fg:#ff9d00 bold"],
     ["question", "bold"],
