--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -24,7 +24,7 @@ jobs:
           changelog-types: '[
           {"type":"feat","section":"Features","hidden":false},
           {"type":"fix","section":"Bug Fixes","hidden":false},
-          {"type":"chore","section":"Miscellaneous","hidden":false}
+          {"type":"chore","section":"Miscellaneous","hidden":false},
           {"type":"perf","section":"Performance improvements","hidden":false}]'
 
 
