ci: release build added, publishing changes to AWS repostitory

--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -3,7 +3,8 @@ name: Create python project release PR
 on:
   push:
     branches:
-      - "test-gn"
+      #todo change to main
+      - "feature/owl2shacl"
 permissions:
   contents: write
   pull-requests: write
@@ -17,7 +18,13 @@ jobs:
           release-type: python
           package-name: release-please-action
           prerelease: false
+          # todo move away from this branch and use main
+          default-branch: feature/owl2shacl
           extra-files: |
             "pyproject.toml"
           version-file: pyproject.toml
-
+          changelog-types: '[
+          {"type":"feat","section":"Features","hidden":false},
+          {"type":"fix","section":"Bug Fixes","hidden":false},
+          {"type":"chore","section":"Miscellaneous","hidden":false},
+          {"type":"perf","section":"Performance improvements","hidden":false}]'
