--- a/.github/workflows/python-test-build.yml
+++ b/.github/workflows/python-test-build.yml
@@ -6,7 +6,9 @@ on:
       - "release-please*"
   push:
     branches-ignore:
-      - "main"
+      #todo remove feature branch when migrated
+      - feature/owl2shacl
+      - main
   workflow_dispatch:
 jobs:
   test:
