--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dev = [
     "types-pytz==2023.3.1.1",
     "types-requests==2.31.0.10",
     "mypy==1.7.0",
+    "pytest==8.2.1",
     "cyclonedx-bom==4.4.3"
 ]
 
