wip: keep owl2shacl branch as main branch

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Release to PyPI
 on:
   push:
     branches:
-      - "master"
+      - "feature/owl2shacl"
     paths:
       - "CHANGELOG.md"
   workflow_dispatch:
