--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,8 +39,8 @@ jobs:
     - test
     runs-on: ubuntu-latest
     environment:
-      name: pypi
-      url: https://pypi.org/p/telicent-owl2shacl
+      name: testpypi
+      url: https://test.pypi.org/p/telicent-owl2shacl
     permissions:
       id-token: write
     steps:
@@ -52,6 +52,8 @@ jobs:
 
     - name: Publish distribution to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        repository-url: https://test.pypi.org/legacy/
 
   do-github-release:
     name: Do GitHub Release
