ci: set to use master branch

--- a/.github/workflows/python-test-build.yml
+++ b/.github/workflows/python-test-build.yml
@@ -6,7 +6,7 @@ on:
       - "release-please*"
   push:
     branches-ignore:
-      - "feature/owl2shacl"
+      - "master"
   workflow_dispatch:
 
 jobs:
